stacks/tools/whoami/whoami-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: traefik
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`whoami.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
          namespace: traefik
      services:
        - name: whoami
          namespace: default
          port: 80
